# ripper

./: .clippy.toml  .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile  lefthook.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/hooks/: pre-commit
.github/workflows/: build.yml
benches/: benchmark.rs
docs/: TESTING.md
src/: lib.rs  main.rs
tests/: cli_test.rs  integration_test.rs
